--- a/src/CheeseMVC/Properties/launchSettings.json
+++ b/src/CheeseMVC/Properties/launchSettings.json
@@ -15,7 +15,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "CheeseMVC": {
+    "MovieMVC": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "http://localhost:5000",
